--- a/src/pages/testing/test-creation/eu-vehicle-category/eu-vehicle-category.html
+++ b/src/pages/testing/test-creation/eu-vehicle-category/eu-vehicle-category.html
@@ -1,31 +1,30 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title margin-left>
-            EU vehicle category
-        </ion-title>
-        <ion-buttons end>
-            <button ion-button
-                    (click)="onSave()">
-                Save
-            </button>
-        </ion-buttons>
-    </ion-navbar>
+  <ion-navbar>
+    <ion-title margin-left>
+      EU vehicle category
+    </ion-title>
+    <ion-buttons end>
+      <button ion-button
+              (click)="onSave()">
+        Save
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 </ion-header>
 
 <ion-content class="content-background-color-grey">
 
-    <p padding-horizontal class="subtitle">M - vehicles designed and constructed for the carriage of passengers and
-        comprising:</p>
-    <ion-list class="eu-cat">
-        <button ion-item padding-left detail-none
-                *ngFor="let elem of categoriesArr"
-                (click)="setVehicleCategory(elem.key)">
-            <h3>{{elem.key.toUpperCase()}}</h3>
-            <p text-wrap>{{elem.value}}</p>
-            <ion-icon item-end class="selected"
-                      name="checkmark"
-                      *ngIf="vehicle.euVehicleCategory === elem.key"></ion-icon>
-        </button>
-    </ion-list>
+  <p padding-horizontal class="subtitle">{{categorySubtitle}}</p>
+  <ion-list class="eu-cat">
+    <button ion-item padding-left detail-none
+            *ngFor="let elem of categoriesArr"
+            (click)="setVehicleCategory(elem.key)">
+      <h3>{{elem.key.toUpperCase()}}</h3>
+      <p text-wrap>{{elem.value}}</p>
+      <ion-icon item-end class="selected"
+                name="checkmark"
+                *ngIf="vehicle.euVehicleCategory === elem.key"></ion-icon>
+    </button>
+  </ion-list>
 
 </ion-content>
