--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -120,7 +120,6 @@
                         <h3>Year of manufacture</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <!-- Year or date? -->
                         <p>{{ vehicleData.techRecord.manufactureYear }}</p>
                     </div>
                 </ion-item>
@@ -179,9 +178,7 @@
                 </h3>
             </ng-container>
         </button>
-        <button ion-item padding-left
-            *ngIf="!commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.HGV)"
-            (click)="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType,VEHICLE_TYPE.TRL) ? showMoreDetails('TrailerBrakesPage') : showMoreDetails('VehicleBrakesPage')">
+        <button ion-item padding-left (click)="showMoreDetails('VehicleBrakesPage')">
             <h3>Brakes</h3>
         </button>
         <button ion-item padding-left (click)="showMoreDetails('VehicleWeightsPage')">
